Fix spacing issue in footer

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -89,9 +89,12 @@
         .footer-copy-right {
             margin-top: 20px;
             display: flex;
+            justify-content: space-between;
+            align-items: center;
 
             @media (max-width: $breakpoint-mobile) { 
                 flex-direction: column;
+                justify-content: flex-start;
                 margin-left: -15px;
 
                 .copy-right-text {
